Chapter05: behavioral patterns