@@ -23,7 +23,7 @@ $ java --enable-preview -cp out/apie Example1_2Main
 $ java --module-path ./Chapter02/module-example.jar --module module.example/example.ExampleMain
 ```
 
-## Chapter 1 - examples
+## Chapter 1 -  initial examples
 The examples are 
 Runnable examples:
 - Example1_2Main
@@ -32,9 +32,9 @@ Runnable examples:
 - Example1_8Main
 - Example1_9Main
 
-## Chapter 2 - creatinoal pattern examples
+## Chapter 2 - java platform examples
 
-## Chapter 3 - structural examples 
+## Chapter 3 - creational patterns examples 
 ```bash
 # Factory Method: creating instances 
 $ javac --release 17 --enable-preview -g -cp out/Chapter03/fm -sourcepath java -d out/Chapter03/fm ./Chapter03/factory_method/*.java
@@ -77,8 +77,7 @@ $ java --enable-preview -cp out/Chapter03/dependency_injection DependencyInjecti
 $ java -XX:StartFlightRecording=filename=<PATTERN_NAME_MAIN>.jfr,dumponexit-true,settings=profile <MAIN_CLASS>
 ```
 
-## Chapter 4 - Behavioral pattern
-
+## Chapter 4 - structural pattern examples
 ```bash
 # Adapter 
 $ javac --release 17 --enable-preview -g -cp out/Chapter04/adapter -sourcepath java -d out/Chapter04/adapter ./Chapter04/adapter/*.java
@@ -127,4 +126,59 @@ $ java --enable-preview -cp out/Chapter04/proxy ProxyMain
 # Twin
 $ javac --release 17 --enable-preview -g -cp out/Chapter04/twin -sourcepath java -d out/Chapter04/twin ./Chapter04/twin/*.java
 $ java --enable-preview -cp out/Chapter04/twin TwinMain
+```
+
+## Chapter 5 - behavioral pattern examples
+```bash
+# Caching 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/caching -sourcepath java -d out/Chapter05/caching ./Chapter05/caching/*.java
+$ java --enable-preview -cp out/Chapter05/caching CachingMain
+
+# Chain of responsibility 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/chain_responsibility -sourcepath java -d out/Chapter05/chain_responsibility ./Chapter05/chain_responsibility/*.java
+$ java --enable-preview -cp out/Chapter05/chain_responsibility ChainOfResponsibilityMain
+
+# Command 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/command -sourcepath java -d out/Chapter05/command ./Chapter05/command/*.java
+$ java --enable-preview -cp out/Chapter05/command CommandMain
+
+# Interpreter 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/interpreter -sourcepath java -d out/Chapter05/interpreter ./Chapter05/interpreter/*.java
+$ java --enable-preview -cp out/Chapter05/interpreter InterpreterMain
+
+# Iterator 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/iterator -sourcepath java -d out/Chapter05/iterator ./Chapter05/iterator/*.java
+$ java --enable-preview -cp out/Chapter05/iterator IteratorMain
+
+# Mediator 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/mediator -sourcepath java -d out/Chapter05/mediator ./Chapter05/mediator/*.java
+$ java --enable-preview -cp out/Chapter05/mediator MediatorMain
+
+# Null object 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/null_object -sourcepath java -d out/Chapter05/null_object ./Chapter05/null_object/*.java
+$ java --enable-preview -cp out/Chapter05/null_object NullObjectMain
+
+# Observer 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/observer -sourcepath java -d out/Chapter05/observer ./Chapter05/observer/*.java
+$ java --enable-preview -cp out/Chapter05/observer ObserverMain
+
+# Pipeline 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/pipeline -sourcepath java -d out/Chapter05/pipeline ./Chapter05/pipeline/*.java
+$ java --enable-preview -cp out/Chapter05/pipeline PipelineMain
+
+# State 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/state -sourcepath java -d out/Chapter05/state ./Chapter05/state/*.java
+$ java --enable-preview -cp out/Chapter05/state StateMain
+
+# Strategy 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/strategy -sourcepath java -d out/Chapter05/strategy ./Chapter05/strategy/*.java
+$ java --enable-preview -cp out/Chapter05/strategy StrategyMain
+
+# Template method 
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/template_method -sourcepath java -d out/Chapter05/template_method ./Chapter05/template_method/*.java
+$ java --enable-preview -cp out/Chapter05/template_method TemplateMethodMain
+
+# Visitor
+$ javac --release 17 --enable-preview -g -cp out/Chapter05/visitor -sourcepath java -d out/Chapter05/visitor ./Chapter05/visitor/*.java
+$ java --enable-preview -cp out/Chapter05/visitor VisitorMain
 ```
